--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "start": "npm run build && webpack-dev-server --port=8000"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.11.0",
-    "webpack": "^3.4.1",
-    "raw-loader": "^0.5.1"
+    "raw-loader": "^0.5.1",
+    "webpack": "^4.23.1",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "phaser": "^3.3.0"
-  }
+    "phaser": "^3.15.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/damyon/matters.git"
+  },
+  "license": "MIT"
 }
