--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "raw-loader": "^0.5.1",
     "webpack": "^4.23.1",
+    "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
